--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <div class="container">
     <div class="row">
-        <div class="col-md-8-offset-2">
+        <div class="col-md-10-offset-1">
             <header>
                 <nav>
                     my nav
@@ -24,12 +24,23 @@
         </div>
     </div>
     <div class="row">
-        <ul>
-            <li>
-                <div></div>
-            </li>
-        </ul>
+        <div class="col-md-10-offset-1">
+            <ul class="list-unstyled">
+                <li>
+                    <div>
+                        <img src="images/bitcoin.png"></img>
+                        <h3>Bitcoin</h3>
+                        <span class="sparkline"></span>
+                        <div id="chart_div"></div>
 
+                        <button type="button" class="btn btn-default btn-xs">
+                            Chart
+                            <span class="glyphicon glyphicon-chevron-down"></span>
+                        </button>
+                    </div>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 
@@ -37,7 +48,9 @@
 <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
-<script src="utility.js"></script>
+<script type="text/javascript" src="https://www.google.com/jsapi"></script>
+<script src="resources/jquery.sparkline.js"></script>
+<script src="resources/utility.js"></script>
 <script src="main.js"></script>
 </body>
 </html>
