--- a/index.html
+++ b/index.html
@@ -24,30 +24,53 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-10-offset-1">
-            <ul class="list-unstyled">
-                <li>
-                    <div>
-                        <img src="images/bitcoin.png"></img>
-                        <h3>Bitcoin</h3>
-                        <span class="sparkline"></span>
-                        <div id="chart_div"></div>
+        <div id="portfolio-container" class="col-md-8-offset-2">
 
-                        <button type="button" class="btn btn-default btn-xs">
-                            Chart
-                            <span class="glyphicon glyphicon-chevron-down"></span>
-                        </button>
-                    </div>
-                </li>
-            </ul>
+
         </div>
     </div>
 </div>
 
 
+<!--//////////////////////////  TEMPLATES /////////////////////////-->
+
+<script id="crypto-template" type="text/x-handlebars-template">
+
+    <div>
+        <img src="images/{{imageName}}"></img>
+        <h3>{{title}}</h3>
+        <h4>Price: {{getCurrentPrice}}</h4>
+        <span class="sparkline"></span>
+        <div id="chart_div"></div>
+
+        <button type="button" class="btn btn-default btn-xs">
+            Chart
+            <span class="glyphicon glyphicon-chevron-down"></span>
+        </button>
+    </div>
+
+</script>
+
+<script id="portfolio-template" type="text/x-handlebars-template">
+
+    <div>
+        <ul class="list-unstyled">
+            {{#each cryptos}}
+            <li>
+                {{{this.createTextElement}}}
+            </li>
+            {{/each}}
+        </ul>
+    </div>
+
+</script>
+
+
+
 <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.2/underscore-min.js"></script>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 <script src="http://netdna.bootstrapcdn.com/bootstrap/3.1.0/js/bootstrap.min.js"></script>
+<script src="http://cdnjs.cloudflare.com/ajax/libs/handlebars.js/1.3.0/handlebars.min.js"></script>
 <script type="text/javascript" src="https://www.google.com/jsapi"></script>
 <script src="resources/jquery.sparkline.js"></script>
 <script src="resources/utility.js"></script>
