--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
 
 <!-- Static navbar -->
-<div class="navbar navbar-inverse navbar-static-top" role="navigation">
+<div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
     <div class="container">
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -71,7 +71,7 @@
         </div>
     </div>
     <div class="row">
-        <div id="portfolio-container" class="col-md-8 col-md-offset-2">
+        <div id="portfolio-container" class="col-md-6 col-md-offset-3">
         </div>
     </div>
 </div>
@@ -80,6 +80,7 @@
 <!--//////////////////////////  TEMPLATES /////////////////////////-->
 <script id="crypto-template" type="text/x-handlebars-template">
 
+    {{!-- as a panel
     <div class="crypto row ">
         <div class="col-md-12 col-md-offset-0">
             <div class="panel panel-default">
@@ -94,18 +95,48 @@
 
                     <button type="button" class="btn btn-default btn-xs">
                         Chart
-                        <!--<span class="glyphicon glyphicon-chevron-down"></span>-->
+                        {{!<span class="glyphicon glyphicon-chevron-down"></span>}}
                         <span class="caret"></span>
                     </button>
                 </div>
             </div>
         </div>
     </div>
+    --}}
+
+    {{!-- with regular flow --}}
+
+    <div class="crypto row ">
+        <div class="col-md-4 col-md-offset-0">
+            <img src="images/{{imageName}}"></img>
+
+            <span><strong>{{title}}</strong></span>
+        </div>
+        <div class="col-md-6 col-md-offset-0">
+            <span><strong>Price: </strong> ${{getCurrentPrice}}</span>
+            <span id="{{toLowerCase title}}-sparkline">{{{createSparkline}}}</span>
+
+            <p>Quantity: </p>
+
+        </div>
+
+
+        <div class="col-md-2 col-md-offset-0">
+
+            <button type="button" class="btn btn-default btn-xs">
+                Chart
+                {{!<span class="glyphicon glyphicon-chevron-down"></span>}}
+                <span class="caret"></span>
+            </button>
+        </div>
+    </div>
+
 
 </script>
 <!--//////////////////////////-->
 <script id="portfolio-template" type="text/x-handlebars-template">
 
+    {{!-- as a list
     <div class="portfolio">
         <ul class="list-unstyled">
             {{#each cryptos}}
@@ -114,6 +145,37 @@
             </li>
             {{/each}}
         </ul>
+    </div>
+    --}}
+
+
+    {{!as a table}}
+    <div class="portfolio">
+        <table class="table">
+            <th>
+                <div class="crypto row ">
+                    <div class="col-md-4 col-md-offset-0">
+                        first
+                    </div>
+                    <div class="col-md-6 col-md-offset-0">
+                        second
+                    </div>
+                    <div class="col-md-2 col-md-offset-0">
+                        third
+                    </div>
+                </div>
+
+            </th>
+
+            {{#each cryptos}}
+            <tr>
+                <td>
+                    {{{this.createTextElement}}}
+                </td>
+            </tr>
+            {{/each}}
+
+        </table>
     </div>
 
 </script>
