--- a/index.html
+++ b/index.html
@@ -97,8 +97,64 @@
 
 <script id="settings-template" type="text/x-handlebars-template">
 
-    <p>hello worlds</p>
+    <div class="settings">
+        <table class="table">
+            <th>
+                <div class="crypto row ">
+                    <div class="col-md-4 col-md-offset-0">
+                        first
+                    </div>
+                    <div class="col-md-6 col-md-offset-0">
+                        second
+                    </div>
+                    <div class="col-md-2 col-md-offset-0">
+                        third
+                    </div>
+                </div>
 
+            </th>
+
+            {{#each settings}}
+            <tr>
+                <td>
+                    {{{createTextElement "#crypto-settings-template" this}}}
+                </td>
+            </tr>
+            {{/each}}
+
+        </table>
+    </div>
+
+
+</script>
+
+<script id="crypto-settings-template" type="text/x-handlebars-template">
+
+
+    <div class="crypto row " data-id="{{toLowerCase cryptoObj.title}}">
+        <div class="col-md-4 col-md-offset-0">
+            <img src="images/{{cryptoObj.imageName}}"></img>
+
+            <span><strong>{{cryptoObj.title}}</strong></span>
+        </div>
+        <div class="col-md-6 col-md-offset-0">
+            <span><strong>Price: </strong> ${{apply cryptoObj.getCurrentPrice this.cryptoObj}}</span>
+            <span class="{{toLowerCase cryptoObj.title}}-sparkline">{{{apply cryptoObj.createSparkline this.cryptoObj}}}</span>
+
+            <p>Quantity: </p>
+
+        </div>
+
+
+        <div class="col-md-2 col-md-offset-0">
+
+            <button type="button" class="btn btn-default btn-xs">
+                Chart
+                {{!<span class="glyphicon glyphicon-chevron-down"></span>}}
+                <span class="caret"></span>
+            </button>
+        </div>
+    </div>
 
 </script>
 
@@ -139,7 +195,7 @@
         </div>
         <div class="col-md-6 col-md-offset-0">
             <span><strong>Price: </strong> ${{getCurrentPrice}}</span>
-            <span id="{{toLowerCase title}}-sparkline">{{{createSparkline}}}</span>
+            <span class="{{toLowerCase title}}-sparkline">{{{createSparkline}}}</span>
 
             <p>Quantity: </p>
 
@@ -195,7 +251,8 @@
             {{#each cryptos}}
             <tr>
                 <td>
-                    {{{createTextElement "#crypto-template" this}}}
+                    {{!--<!--{{{createTextElement "#crypto-template" this}}}-->--}}
+                    {{{apply this.createTextElement this "#crypto-template" "something else"}}}
                 </td>
             </tr>
             {{/each}}
