--- a/index.html
+++ b/index.html
@@ -117,7 +117,8 @@
             {{#each settings}}
             <tr>
                 <td>
-                    {{{createTextElement "#crypto-settings-template" this}}}
+                    {{!--<!--{{{createTextElement "#crypto-settings-template" this}}}-->--}}
+                    {{{apply this.cryptoObj.createTextElement this.cryptoObj "#crypto-settings-template"}}}
                 </td>
             </tr>
             {{/each}}
@@ -130,16 +131,42 @@
 
 <script id="crypto-settings-template" type="text/x-handlebars-template">
 
+    {{!--
+    <!--<div class="crypto row " data-id="{{toLowerCase cryptoObj.title}}">-->
+        <!--<div class="col-md-4 col-md-offset-0">-->
+            <!--<img src="images/{{cryptoObj.imageName}}"></img>-->
 
-    <div class="crypto row " data-id="{{toLowerCase cryptoObj.title}}">
+            <!--<span><strong>{{cryptoObj.title}}</strong></span>-->
+        <!--</div>-->
+        <!--<div class="col-md-6 col-md-offset-0">-->
+            <!--<span><strong>Price: </strong> ${{apply cryptoObj.getCurrentPrice this.cryptoObj}}</span>-->
+            <!--<span class="{{toLowerCase cryptoObj.title}}-sparkline">{{{apply cryptoObj.createSparkline this.cryptoObj}}}</span>-->
+
+            <!--<p>Quantity: </p>-->
+
+        <!--</div>-->
+
+
+        <!--<div class="col-md-2 col-md-offset-0">-->
+
+            <!--<button type="button" class="btn btn-default btn-xs">-->
+                <!--Chart-->
+                <!--{{!<span class="glyphicon glyphicon-chevron-down"></span>}}-->
+                <!--<span class="caret"></span>-->
+            <!--</button>-->
+        <!--</div>-->
+    <!--</div>-->
+    --}}
+
+    <div class="crypto row " data-id="{{toLowerCase title}}">
         <div class="col-md-4 col-md-offset-0">
-            <img src="images/{{cryptoObj.imageName}}"></img>
+            <img src="images/{{imageName}}"></img>
 
-            <span><strong>{{cryptoObj.title}}</strong></span>
+            <span><strong>{{title}}</strong></span>
         </div>
         <div class="col-md-6 col-md-offset-0">
-            <span><strong>Price: </strong> ${{apply cryptoObj.getCurrentPrice this.cryptoObj}}</span>
-            <span class="{{toLowerCase cryptoObj.title}}-sparkline">{{{apply cryptoObj.createSparkline this.cryptoObj}}}</span>
+            <span><strong>Price: </strong> ${{getCurrentPrice}}</span>
+            <span class="{{toLowerCase title}}-sparkline">{{{createSparkline}}}</span>
 
             <p>Quantity: </p>
 
@@ -252,7 +279,8 @@
             <tr>
                 <td>
                     {{!--<!--{{{createTextElement "#crypto-template" this}}}-->--}}
-                    {{{apply this.createTextElement this "#crypto-template" "something else"}}}
+                    {{!--<!--{{{this.createTextElement "#crypto-template"}}} this doesn't work-->--}}
+                    {{{apply this.createTextElement this "#crypto-template"}}}
                 </td>
             </tr>
             {{/each}}
