--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                     {{!--<!--{{{createTextElement "#settings-crypto-template" this}}}-->--}}
                     {{!--<!--{{{apply this.cryptoObj.createTextElement this.cryptoObj "#settings-crypto-template"}}}-->
                     --}}
-                    {{{apply createTextElement this "#settings-crypto-template"}}}
+                    {{{apply this.createTextElement this "#settings-crypto-template"}}}
                 </td>
             </tr>
             {{/each}}
